--- a/index.html
+++ b/index.html
@@ -175,11 +175,16 @@ window.onload = function() {
 <div>And don't forget: <a href="https://developers.google.com/maps/documentation/javascript/">Google Maps API</a> / <a href="http://www.microsoft.com/maps/choose-your-bing-maps-API.aspx">Bing Maps API</a> / <a href="http://developer.here.com/web/guest/javascript-apis">Nokia HERE Maps API</a> / <a href="https://developers.arcgis.com/en/javascript/">ESRI ArcGIS API</a></div>
 <div>3 exceptions to the simplified story!</div>
 <div>Exception #1: Tiles are always rasters <em>EXCEPT</em> when they're not!</div>
-<div><img src="images/vector_tiles.png"><em>vector tiles!</em> What are they? <a href="http://bl.ocks.org/wboykinm/7393674">(unrelated demo)</a></div>
-<div><a href="https://www.mapbox.com/blog/vector-tiles/">vector tiles</a>: they are an alternative to a database that makes raster tiles. They still render to rasters for display</div>
+<div><img src="images/vector_tiles.png"><em>vector data tiles!</em> What are they?</div>
+<div><a href="https://www.mapbox.com/developers/vector-tiles/">vector data tiles</a>: they are an alternative to a database that makes raster tiles. They still render to rasters for display</div>
+<div>Technically they are Prototype Buffers that store internal data that Mapnik uses and organized into layers.</div>
+<div>A GeoJSON vector tile will return a JSON object, and it might include roads as LineStrings and bodies of water as Polygons. (<a href="http://wiki.openstreetmap.org/wiki/Vector_tiles">source</a>)</div> 
+
 <div><em>Raster:</em> ask for data to fit into tile</div>
 <div><em>Vector:</em> already have vector data sliced up in the way that I will make raster tiles</div>
 <div>So someone has to go through and chop up that data, like <a href="https://www.mapbox.com/blog/vector-tiles/">MapBox</a></div>
+<div>But more importantly, you can make it pretty with CartoCSS and it won't take hours to re-do all the images.</div>
+<div><img src="http://www.macwright.org/presentations/carto-foss4g/tilemill_ui.png"></div>
 <div>Exception #2: Can’t interact with features on a raster. BUT <a href="https://www.mapbox.com/developers/utfgrid/">UTFGrid</a> (Mapbox invention) makes it possible.</div>
 <div style="color: black"><img src="images/utfgrid.png">UTFGrid is an invisble tile layer made up of arbitrary letters which are indexes into the clickable data</div>
 <div style="color: black"><img src="images/parks-conservancy.png">Stamen used this technique on the <a href="http://www.parksconservancy.org/map/#/?coords=15:37.8016:-122.4659&date=1394668684907">Parks Conservancy map.</a></div>
